kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-api
  labels:
    app: stock-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
  template:
    metadata:
      labels:
        app: stock-api
    spec:
      containers:
        - name: stock-api
          image: omgftw/stock-api:latest
          ports:
            - containerPort: 8080
