kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-api
spec:
  selector:
    app: stock-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
